examples/fail/lexer/invalid_hex_empty.bina
// EXPECT_LEXER_ERROR: invalid hexadecimal literal
fn main() -> int {
    let x = 0x;
    return 0;
}
